原本这个版本，graphql文件得一个一个配置 现在因为底层依赖项的加强，可以直接配文件夹目录

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,13 @@ pluginManagement {
     repositories {
         mavenLocal()
         gradlePluginPortal()
+        maven {
+            url = uri('http://nexus-server:8081/repository/maven-public')
+            credentials {
+                username "$nexusUser"
+                password "$nexusPassword"
+            }
+        }
     }
 }
 
