--- a/graphql-codegen-gradle-plugin/build.gradle
+++ b/graphql-codegen-gradle-plugin/build.gradle
@@ -3,9 +3,19 @@ plugins {
     id "java-gradle-plugin"
 }
 
+apply plugin: 'maven'
+apply plugin: 'maven-publish'
+
 repositories {
     maven {
         url 'https://repo.gradle.org/gradle/libs-releases-local'
+    }
+    maven {
+        url = uri('http://nexus-server:8081/repository/maven-public')
+        credentials {
+            username "$nexusUser"
+            password "$nexusPassword"
+        }
     }
     mavenCentral()
     mavenLocal()
@@ -16,14 +26,15 @@ apply plugin: "java"
 apply plugin: "idea"
 apply plugin: "maven-publish"
 
-group = "io.github.kobylynskyi"
-version = "1.3.0"
+//group = "io.github.kobylynskyi"
+group = "com.onepiece.graphql"
+version = "1.3.1-SNAPSHOT"
 description = "Provides a task for generating Java code based on GraphQL schema"
 
 dependencies {
     compile gradleApi()
 
-    compile 'io.github.kobylynskyi:graphql-java-codegen:1.3.0'
+    compile 'com.onepiece.graphql:graphql-java-codegen:1.3.1-SNAPSHOT'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.1'
@@ -45,4 +56,18 @@ pluginBundle {
     vcsUrl = 'https://github.com/kobylynskyi/graphql-java-codegen-gradle-plugin'
     description = 'Gradle plugin for GraphQL Java code generation'
     tags = ['graphql', 'graphql-java', 'graphql-java-codegen', 'graphql-codegen']
+}
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            //nexus-server of OnePiece
+            repository(url: "http://nexus-server:8081/repository/maven-snapshots/") {
+                authentication(userName: "$nexusUser", password: "$nexusPassword")
+            }
+            pom.version = version
+            pom.artifactId = 'graphql-codegen-gradle-plugin'
+            pom.groupId = "com.onepiece.graphql"
+        }
+    }
 }
